2011-04-28  Xan Lopez  <xlopez@igalia.com>

        Unreviewed build fix.

        * GNUmakefile.am:

2011-04-28  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        fix python printing test
        https://bugs.webkit.org/show_bug.cgi?id=59719

        Now that we run scm commands in summarize_results, --verbose prints
        debug logging to stderr.

        * Scripts/webkitpy/layout_tests/layout_package/printing_unittest.py:

2011-04-28  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        link to tests at a specific revision in the results.html file
        https://bugs.webkit.org/show_bug.cgi?id=59711

        * Scripts/webkitpy/common/checkout/scm.py:
        Add a method to get the head svn revision.
        * Scripts/webkitpy/common/checkout/scm_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/manager.py:
        Include the svn revision in the results json.

2011-04-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Sam Weinig.

        [GTK] Remove WKURLCreateWithURL()
        https://bugs.webkit.org/show_bug.cgi?id=59691

        Use WKURLCreateWithUTF8CString() instead of WKURLCreateWithURL().

        * MiniBrowser/gtk/main.c:
        (activateUriEntryCallback):
        (main):

2011-04-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] WKView should be a GtkWidget
        https://bugs.webkit.org/show_bug.cgi?id=59603

        Don't use WKViewGetWindow(), use WKView as a GtkWidget instead.

        * MiniBrowser/gtk/main.c:
        (createWindow):
        (main):

2011-04-28  Gabor Rapcsanyi  <rgabor@webkit.org>

        Reviewed by Csaba Osztrogonác.

        [Qt] Add ARM specific Skipped list
        https://bugs.webkit.org/show_bug.cgi?id=59680

        * Scripts/old-run-webkit-tests:
        * Scripts/webkitdirs.pm:

2011-04-27  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.
