@@ -189,7 +189,11 @@ def summarize_results(port_obj, expectations, result_summary, retry_summary, tes
     results['layout_tests_dir'] = port_obj.layout_tests_dir()
     results['has_wdiff'] = port_obj.wdiff_available()
     results['has_pretty_patch'] = port_obj.pretty_patch_available()
-    results['revision'] = scm.default_scm().head_svn_revision()
+    try:
+        results['revision'] = scm.default_scm().head_svn_revision()
+    except Exception:
+        # Handle cases where we're running outside of version control.
+        results['revision'] = ""
 
     return results
 
